--- a/app/public/index.html
+++ b/app/public/index.html
@@ -15,7 +15,7 @@
     <input id="input" autocomplete="off" /><button>Send</button>
   </form>
   <script>
-    var socket = io('ws://localhost:3000');
+    var socket = io('ws://localhost:8080/ws');
     var form = document.getElementById('form');
     var input = document.getElementById('input');
     form.addEventListener('submit', function (e) {
